# mouse-highlight

./: .gitignore  README.md  build.gradle  build.gradle.kts  pom.xml
.github/workflows/: build.yml  maven.yml
go-version/: go.mod  huddle_helper.go  names.txt
python-version/: build.bat  build_nuitka_pyside6.bat  build_nuitka_tkinter.bat  build_pyqt6.bat  build_tkinter.bat  huddle_helper.py  huddle_helper_tkinter.py  mouse_highlight.py  names.txt  pyproject.toml  run.bat  simple_tail_gui.py
src/main/java/com/github/aar0u/: App.java
src/main/java/com/github/aar0u/listener/: GlobalMouseListener.java
src/main/java/com/github/aar0u/mousehighlight/: App.java
src/main/java/com/github/aar0u/mousehighlight/listener/: MouseListener.java
src/main/java/com/github/aar0u/mousehighlight/service/: ConfigManager.java  LogWindow.java  Logger.java
src/main/java/com/github/aar0u/mousehighlight/ui/: ShapedWindow.java  TrayMenu.java
src/main/java/com/github/aar0u/service/: Logger.java
src/main/java/com/github/aar0u/ui/: LogWindow.java  ShapedWindow.java  TrayMenu.java
src/main/java/org/example/: GlobalMouseListener.java  ShapedWindow.java  TrayMenu.java
